# deye-energy-manager

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
custom_components/smart_energy_manager/: __init__.py  binary_sensor.py  config_flow.py  const.py  consumption_forecast.py  coordinator.py  entity.py  manifest.json  models.py  number.py  pv_baseline.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/smart_energy_manager/adapters/: __init__.py  base.py  noop.py  solarman.py  sunsynk.py
custom_components/smart_energy_manager/decision/: __init__.py  base.py  context.py  plan.py  signals.py
custom_components/smart_energy_manager/decision/strategies/: __init__.py  backup.py  balanced.py  eco.py
custom_components/smart_energy_manager/translations/: en.json
deye_energy_manager.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_auto_apply.py  test_config_flow.py  test_consumption_forecast.py  test_coordinator.py  test_init.py  test_pv_baseline.py
tests/adapters/: test_noop.py  test_solarman.py  test_sunsynk.py
tests/decision/: test_backup.py  test_balanced.py  test_eco.py  test_plan_helpers.py  test_signals.py
